Removed async implementation to hopefully keep the fish bag from wiping Reduced how often the fish parser runs